--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Questions</title>
-    <link rel="stylesheet" href="quizstyle.css" />
+    <link rel="stylesheet" href="qStyle.css" />
   </head>
   <body>
     <div id="hud">
